--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "JSONStream": "^1.3.5",
+    "filereader-stream": "^2.0.0",
+    "moment": "^2.29.1",
     "point-in-polygon": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
     "react-vis": "^1.11.7",
     "serve": "^11.3.2",
